--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title> Vous avez visiblement fait de la merde....</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
@@ -58,10 +58,10 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <h1>Vous avez fait crasher le systeme.</h1>
+      <p>Vous n'avez pas honte?</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>Si c'est toi qui gere la maintenance, reveille toi !</p>
   </div>
 </body>
 </html>
