Changed error pages"

--- a/public/422.html
+++ b/public/422.html
@@ -54,9 +54,9 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="">
   <!-- This file lives in public/422.html -->
-  <div class="dialog">
+  <div class="">
     <div>
       <h1>The change you wanted was rejected.</h1>
       <p>Maybe you tried to change something you didn't have access to.</p>
