--- a/public/404.html
+++ b/public/404.html
@@ -54,9 +54,9 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="">
   <!-- This file lives in public/404.html -->
-  <div class="dialog">
+  <div class="">
     <div>
       <h1>Vous avez fait crasher le systeme.</h1>
       <p>Vous n'avez pas honte?</p>
