--- a/public/500.html
+++ b/public/500.html
@@ -54,9 +54,9 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="">
   <!-- This file lives in public/500.html -->
-  <div class="dialog">
+  <div class="">
     <div>
       <h1>Vous avez fait de la merde</h1>
     </div>
