--- a/public/500.html
+++ b/public/500.html
@@ -326,7 +326,7 @@
     <div class="hr"></div>
     <div class="context secondary-text-color">
       <p>
-        Une erreure est survenu. Contactez le service client si le pb persiste..
+        Une erreur est survenue. Contactez le service client si le problème persiste..
       </p>
     </div>
     <div class="buttons-container">
