test in production

--- a/public/404.html
+++ b/public/404.html
@@ -275,7 +275,7 @@
 
     .background-image {
       background-image: linear-
-        
+
         (to right bottom, #051937, #004d7a, #008793, #00bf72, #a8eb12);;
       background-color:  !important;
     }
@@ -328,7 +328,7 @@
     <div class="hr"></div>
     <div class="context secondary-text-color">
       <p>
-        Une erreure est survenu. Contactez le service client si le pb persiste..
+        Une erreur est survenue. Contactez le service client si le probleme persiste
       </p>
     </div>
     <div class="buttons-container">
@@ -337,7 +337,7 @@
     </div>
   </div>
 </center>
-    
+
     <script>
      function ErrorPage(container, pageType, templateName) {
        this.$container = $(container);
