--- a/public/500.html
+++ b/public/500.html
@@ -321,12 +321,12 @@
       500
     </div>
     <div class="subheader primary-text-color">
-      Desole, un probleme technique  !
+      Desole, un probleme technique !
     </div>
     <div class="hr"></div>
     <div class="context secondary-text-color">
       <p>
-        Une erreur est survenue. Contactez le service client si le problème persiste..
+        Une erreur est survenue. Contactez le service client si le probleme persiste.
       </p>
     </div>
     <div class="buttons-container">
